# comment/delivery/http/comment_handler.go
@@ -30,6 +30,17 @@ func NewCommentHandler(routers *gin.Engine, commentUseCase domain.CommentUseCase
 	}
 }
 
+// Fetch godoc
+// @Summary			Fetch all comments
+// @Description	Get all comments with authentication user
+// @Tags        comments
+// @Accept      json
+// @Produce     json
+// @Success     200	{object}	utils.ResponseDataFetchedComment
+// @Failure     400	{object}	utils.ResponseMessage
+// @Failure     401	{object}	utils.ResponseMessage
+// @Security    Bearer
+// @Router      /comments     [get]
 func (handler *commentHandler) Fetch(ctx *gin.Context) {
 	var (
 		comments []domain.Comment
@@ -55,6 +66,18 @@ func (handler *commentHandler) Fetch(ctx *gin.Context) {
 	})
 }
 
+// Store godoc
+// @Summary			Create a comment
+// @Description	create and store a comment with authentication user
+// @Tags        comments
+// @Accept      json
+// @Produce     json
+// @Param       json	body			utils.AddComment true  "Add Comment"
+// @Success     201		{object}  utils.ResponseDataAddedComment
+// @Failure     400		{object}	utils.ResponseMessage
+// @Failure     401		{object}	utils.ResponseMessage
+// @Security    Bearer
+// @Router      /comments	[post]
 func (handler *commentHandler) Store(ctx *gin.Context) {
 	var (
 		comment domain.Comment
@@ -98,7 +121,7 @@ func (handler *commentHandler) Store(ctx *gin.Context) {
 
 	ctx.JSON(http.StatusCreated, helpers.ResponseData{
 		Status: "success",
-		Data: utils.NewComment{
+		Data: utils.AddedComment{
 			ID:        comment.ID,
 			UserID:    comment.UserID,
 			PhotoID:   comment.PhotoID,
@@ -108,6 +131,20 @@ func (handler *commentHandler) Store(ctx *gin.Context) {
 	})
 }
 
+// Update godoc
+// @Summary			Update a comment
+// @Description	update a comment by id with authentication user
+// @Tags        comments
+// @Accept      json
+// @Produce     json
+// @Param       id		path			string  true  "Comment ID"
+// @Param       json	body			utils.UpdateComment	true	"Update Comment"
+// @Success     200		{object}  utils.ResponseDataUpdatedComment
+// @Failure     400		{object}	utils.ResponseMessage
+// @Failure     401		{object}	utils.ResponseMessage
+// @Failure     404		{object}	utils.ResponseMessage
+// @Security    Bearer
+// @Router      /comments/{id} [put]
 func (handler *commentHandler) Update(ctx *gin.Context) {
 	var (
 		comment domain.Comment
@@ -155,6 +192,19 @@ func (handler *commentHandler) Update(ctx *gin.Context) {
 	})
 }
 
+// Delete godoc
+// @Summary			Delete a comment
+// @Description	Delete a comment by id with authentication user
+// @Tags        comments
+// @Accept      json
+// @Produce     json
+// @Param       id  path			string	true	"Comment ID"
+// @Success     200 {object}	utils.ResponseMessageDeletedComment
+// @Failure     400 {object}	utils.ResponseMessage
+// @Failure     401	{object}	utils.ResponseMessage
+// @Failure     404	{object}	utils.ResponseMessage
+// @Security    Bearer
+// @Router      /comments/{id}	[delete]
 func (handler *commentHandler) Delete(ctx *gin.Context) {
 	commentID := ctx.Param("commentId")
 
